--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <script src="#"></script>
+    <script src="jquery-1.11.0.min.js"></script>
+    <script src="popup.js"></script>
   </head>
   <body>
-  Test
+  <p id="output"></p>
   </body>
 </html>
