--- a/Juicer API/JuicerAPI.html
+++ b/Juicer API/JuicerAPI.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
       <!-- FontAwesome - http://fortawesome.github.io/Font-Awesome/ -->
       <script src="javascript/jquery-1.9.1.min.js"></script>
+      <script type="text/javascript" language="javascript" src="articles.jsonp"></script>
    </head>
    <body>
          <script src="javascript/BBC-Juicer.js"></script>        
