--- a/Extension/results/results.html
+++ b/Extension/results/results.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>????????</title>
+	<title>Results</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -13,7 +13,7 @@
     {{outlet}}
 </script>
 <script type="text/x-handlebars" id="index">
-    Searching...
+    <img src="../img/loader.gif"/>  Searching...
     <div class="container">
         {{outlet}}
     </div>
@@ -29,11 +29,10 @@
                     <img {{bind-attr src=item.image}}>
             </div>
             <div class="col-md-9">
-                <h2>{{item.title}}</h2><br>
+                <a {{bind-attr href=item.url}} target="_blank"><h2>{{item.title}}</h2></a>
                 <b>From:</b> {{item.source}}<br>
                 <b>Date:</b> {{item.published}}<br>
                 {{item.description}}<br>
-                <a {{bind-attr href=item.url}} target="_blank">Open article</a>
             </div>
         </div>
         {{/each}}
