--- a/Extension/results/results.html
+++ b/Extension/results/results.html
@@ -21,7 +21,7 @@
 
 <script type="text/x-handlebars" id="main">
     <div class="header">
-        Found {{model.length}} related items.
+        Found {{model.length}} items related to: {{searchTerm}}.
     </div>
    {{#each item in model}}
         <div class="item">
