Updated icon; updated manifest

--- a/Extension/popup/popup.html
+++ b/Extension/popup/popup.html
@@ -4,6 +4,6 @@
     <script src="popup.js"></script>
   </head>
   <body>
-  <p id="output"></p>
+  <p>StoryGrab was developed for the BBC newsHACK 2</p>
   </body>
 </html>
