--- a/Extension/results/results.html
+++ b/Extension/results/results.html
@@ -13,7 +13,12 @@
     {{outlet}}
 </script>
 <script type="text/x-handlebars" id="index">
-    <img src="../img/loader.gif"/>  Searching...
+    <div id="loader">
+		<img class="logo" src="../img/logo.png"/><br/><br/>
+		<img src="../img/loader.gif"/>
+		<br/>
+		<h4>Searching...</h4>
+	</div>
     <div class="container">
         {{outlet}}
     </div>
@@ -21,20 +26,29 @@
 
 <script type="text/x-handlebars" id="main">
     <div class="header">
-        Found {{model.length}} items related to: {{model.searchTerm}}.
+		<img class="logo" src="../img/logo.png"/><br/><br/>
+        Grabbed {{model.length}} stories related to: {{model.searchTerm}}.
     </div>
    {{#each item in articles}}
         <div class="item">
-            <div class="col-md-3">
+			<div class="item_img">
+				<img {{bind-attr src=item.image}}>
+			</div>
+            <!--<div class="col-md-3">
                     <img {{bind-attr src=item.image}}>
-            </div>
-            <div class="col-md-9">
+            </div>-->
+			<div class="item_cnt">
                 <a {{bind-attr href=item.url}} target="_blank"><h2>{{item.title}}</h2></a>
                 <b>From:</b> {{item.source}}<br>
                 <b>Date:</b> {{item.published}}<br>
-                 {{item.keywordCount}}<br>
                 {{item.description}}<br>
-            </div>
+			</div>
+            <!--<div class="col-md-9">
+                <a {{bind-attr href=item.url}} target="_blank"><h2>{{item.title}}</h2></a>
+                <b>From:</b> {{item.source}}<br>
+                <b>Date:</b> {{item.published}}<br>
+                {{item.description}}<br>
+            </div>-->
         </div>
         {{/each}}
 </script>
