--- a/Extension/results/results.html
+++ b/Extension/results/results.html
@@ -45,14 +45,10 @@
 </script>
 
 <script src="js/libs/jquery-1.10.2.js">
-</script>
 <script src="js/libs/bootstrap.min.js">
-</script>
 <script src="js/libs/handlebars-1.1.2.js">
-</script>
 <script src="js/libs/ember-1.5.0.js">
-</script>
 <script src="js/app.js">
-</script>
+<script src="js/mapreduce.js"></script>
 </body>
 </html>
