--- a/Extension/results/results.html
+++ b/Extension/results/results.html
@@ -34,6 +34,8 @@
 			<div class="item_img">
 				{{#if item.image}}
 					<img {{bind-attr src=item.image}}>
+				{{else}}
+					<img src="../img/tempLogo.jpg">
 				{{/if}}
 			</div>
 			<div class="item_cnt">
