--- a/Extension/results/results.html
+++ b/Extension/results/results.html
@@ -35,7 +35,7 @@
 				{{#if item.image}}
 					<img {{bind-attr src=item.image}}>
 				{{else}}
-					<img src="../img/tempLogo.jpg">
+					<img src="../img/img_placeholder.png">
 				{{/if}}
 			</div>
 			<div class="item_cnt">
