--- a/Extension/results/results.html
+++ b/Extension/results/results.html
@@ -14,7 +14,7 @@
 </script>
 <script type="text/x-handlebars" id="index">
     <div id="loader">
-		<img class="logo" src="../img/logo.png"/><br/><br/><br/>
+		<img class="logo" src="../img/logo_new.png"/><br/><br/><br/>
 		<img id="loading_img" src="../img/loader.gif"/>
 		<br/><br/>
 		<h4>Grabbing stories...</h4>
@@ -26,7 +26,7 @@
 
 <script type="text/x-handlebars" id="main">
     <div class="header">
-		<img class="logo" src="../img/logo.png"/><br/><br/>
+		<img class="logo" src="../img/logo_new.png"/><br/><br/>
         Grabbed {{model.length}} stories related to: <b>{{model.searchTerm}}</b><br/>.
     </div>
         {{#each item in model}}
